<resources>
    <string name="app_name">fonn.link</string>
    <string name="AcceptCall">Accept</string>
    <string name="DeclineCall">Decline</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_history">History</string>
    <string name="menu_setting">Settings</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="connected">Connected</string>
    <string name="endingthecall">Ending the call</string>
    <string name="resend_again_msg">Resend</string>

    <string name="otp_title">Please enter the code from your mobile phone</string>
    <string name="sent_to_91_xxxx_xxx">+639********</string>
    <string name="otp_button_text">Next</string>
    <string name="message">We have sent an OTP to</string>
    <string name="message2">your Mobile</string>
    <string name="title_activity_logout_fragment">LogoutFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="decline">Decline</string>
    <string name="add_new_name">Add new / Name</string>
    <string name="ready">READY</string>
    <string name="disconnected">Disconnected</string>
    <string name="error">Error</string>
    <string name="connecting">Connecting</string>
    <string name="adsapi">https://opis.link/api/ads</string>
    <string name="version">v.0.4.0</string>
    <string name="server_domain">https://test.opis.link</string>
    <string name="dateupload">"Date uploaded: "</string>
    <string name="location">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus feugiat.</string>
    <string name="uploadimage">Upload Image</string>
</resources>