<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".OTPactivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintlayou2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/message"
                        android:textSize="@dimen/tv_profile" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="@string/message2"
                        android:textSize="@dimen/tv_profile" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/otp_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fourteensp" />

                    <TextView
                        android:id="@+id/balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/sent_to_91_xxxx_xxx"
                        android:textColor="@color/black"

                        android:textSize="@dimen/fourteensp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_verify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="36dp"
                android:background="@drawable/buttonshape"
                android:backgroundTint="#108BEF"
                android:gravity="center"
                android:text="@string/otp_button_text"

                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="2:00"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_verify"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_verify">

                <TextView
                    android:id="@+id/tv_didnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Didnt Receive?"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="resend"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/resend_again_msg"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_timer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/otp_edit_text1"
                    android:layout_width="@dimen/et_otp_width"
                    android:layout_height="@dimen/et_otp_height"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="@dimen/margin_right_otp"
                    android:background="@drawable/otp_edittext"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/otp_edit_text2"
                    android:layout_width="@dimen/et_otp_width"
                    android:layout_height="@dimen/et_otp_height"
                    android:layout_marginEnd="@dimen/margin_right_otp"
                    android:background="@drawable/otp_edittext"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/otp_edit_text3"
                    android:layout_width="@dimen/et_otp_width"
                    android:layout_height="@dimen/et_otp_height"
                    android:layout_marginEnd="@dimen/margin_right_otp"
                    android:background="@drawable/otp_edittext"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/otp_edit_text4"
                    android:layout_width="@dimen/et_otp_width"
                    android:layout_height="@dimen/et_otp_height"
                    android:layout_marginEnd="@dimen/margin_right_otp"
                    android:background="@drawable/otp_edittext"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>